<resources>
    <string name="app_name">Cardiograma</string>
    <string name="action_settings">Settings</string>
    <string name="Sounds">Sounds</string>
    <string name="Auto_Stop">Auto Stop</string>
    <string name="Support">Support</string>
    <string name="hint">Cover the rear camera with your \n fignertip and press start</string>
    <string name="bpm">bpm</string>
    <string name="Discard">Discard</string>
    <string name="Save">Save</string>
    <string name="REST">REST</string>
    <string name="WARM_UP">WARM UP</string>
    <string name="CARDIO">CARDIO</string>
    <string name="accept">ACCEPT</string>
    <string name="EXTREME">EXTREME</string>
    <string name="mopubAdsId">cf0e867b51ff412a8df7c4b0f77e265f</string>
    <string name="admobAdsId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appt_key">8df93e9139807fb27e3b74d1967abb0bb06330102fe213e8817ca510363e6e7e</string>
</resources>
