<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relHintMeausre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/relHint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imgvHands"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/handscover" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgvHands"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/hint"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relGraph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtHeartBeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="65"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtbpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txtHeartBeat"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/txtHeartBeat"
                android:gravity="center"
                android:text="@string/bpm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/txtHeartBeat"
                android:visibility="visible" />

            <!--<ImageView-->
                <!--android:id="@+id/imgvLines"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/_15sdp"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_marginLeft="@dimen/_5sdp"-->
                <!--android:layout_marginRight="@dimen/_5sdp"-->
                <!--android:layout_marginTop="@dimen/_5sdp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:src="@drawable/parlines" />-->

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relStartButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imgvStart"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/start" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relSaveMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/round_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtHeartBeat_SaveMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="65"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bpm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linButtons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50sdp">
            <TextView
                android:id="@+id/txtDiscard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/round_rect_buttonbg"
                android:text="@string/Discard"
                android:textColor="@color/colorDiscardBtn"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/txtSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/round_rect_buttonbg"
                android:text="@string/Save"
                android:textColor="@color/colorSaveBtn"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_85sdp"
            android:orientation="horizontal"
            android:layout_above="@+id/linButtons"
            android:layout_marginBottom="@dimen/_60sdp">

            <RelativeLayout
                android:id="@+id/relRest"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/imgvRest"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rest_deselected" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/REST"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relWarmUp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/imgvWarmup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/warmup_selected" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/WARM_UP"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relCardio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/imgvCardio"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cardiounselected" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/CARDIO"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relExtreme"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/imgvExtreme"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/extremeunselected" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/EXTREME"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"
                    />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>



</LinearLayout>
